--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -60,10 +60,23 @@
                     <li>
                         <asp:HyperLink ID="Contact" runat="server" NavigateUrl="~/Contact.aspx">Contact Us</asp:HyperLink>
                     </li>
-                    <li>
-                        <asp:HyperLink ID="Librarian" runat="server" NavigateUrl="~/Librarian/default.aspx">Lirarian</asp:HyperLink>
-                        
-                    </li>
+                    <li class="dropdown">
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Librarian<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="~/librarian/overDue.aspx">OverDue Report</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/rentMaterial.aspx">Rent</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/returnMaterial.aspx">Return</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllRentals.aspx" id="A7">Currently Rented</asp:HyperLink></li>
+                               <li class="divider"></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewPatron.aspx">Add a New Patron</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllPatron.aspx">View Patrons</asp:HyperLink></li>
+                               <li class="divider"></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewMaterial.aspx">Add New Material</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllMaterial.aspx">View Material</asp:HyperLink></li>
+                               
+                            </ul>
+                        </li>
+                    </>
                     <li>
                         <asp:HyperLink ID="Admin" runat="server" NavigateUrl="~/Admin/default.aspx">Admin</asp:HyperLink>
                     </li>
