--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -69,10 +69,10 @@
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllRentals.aspx" id="A7">Currently Rented</asp:HyperLink></li>
                                <li class="divider"></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewPatron.aspx">Add a New Patron</asp:HyperLink></li>
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllPatron.aspx">View Patrons</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/PatronTable.aspx">View Patrons</asp:HyperLink></li>
                                <li class="divider"></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewMaterial.aspx">Add New Material</asp:HyperLink></li>
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllMaterial.aspx">View Material</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/MaterialsTable.aspx">View Material</asp:HyperLink></li>
                                
                             </ul>
                         </li>
