--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -1,6 +1,11 @@
 ﻿<%@ Master Language="VB" CodeFile="SLPLMasterPage.master.vb" Inherits="SLPLMasterPage" %>
 
 <!DOCTYPE html>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -61,7 +66,7 @@
                         <asp:HyperLink ID="Contact" runat="server" NavigateUrl="~/Contact.aspx">Contact Us</asp:HyperLink>
                     </li>
                     <li class="dropdown">
-                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Librarian<b class="caret"></b></a>
+                        <a href="#" ID="Librarian" data-toggle="dropdown" class="dropdown-toggle">Librarian<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="~/librarian/overDue.aspx">OverDue Report</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/rentMaterial.aspx">Rent</asp:HyperLink></li>
@@ -76,7 +81,7 @@
                                
                             </ul>
                         </li>
-                    </>
+                    
                     <li>
                         <asp:HyperLink ID="Admin" runat="server" NavigateUrl="~/Admin/default.aspx">Admin</asp:HyperLink>
                     </li>
