--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,6 +5,11 @@
  */
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+.validationError {
+    font-weight: bold;
+    color: red;
+}
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
