--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -1,11 +1,7 @@
 ﻿<%@ Master Language="VB" CodeFile="SLPLMasterPage.master.vb" Inherits="SLPLMasterPage" %>
 
 <!DOCTYPE html>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -49,7 +45,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">South Liberty Public Library</a>
+                <a class="navbar-brand" href="default.aspx">South Liberty Public Library</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,12 +62,12 @@
                         <asp:HyperLink ID="Contact" runat="server" NavigateUrl="~/Contact.aspx">Contact Us</asp:HyperLink>
                     </li>
                     <li class="dropdown">
-                        <a href="#" ID="Librarian" data-toggle="dropdown" class="dropdown-toggle">Librarian<b class="caret"></b></a>
+                        <a href="#" id="librarian" data-toggle="dropdown" class="dropdown-toggle">Librarian<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="~/librarian/overDue.aspx">OverDue Report</asp:HyperLink></li>
+                            <li><asp:HyperLink ID="OverdueReport" runat="server" NavigateUrl="~/librarian/overDue.aspx">OverDue Report</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/rentMaterial.aspx">Rent</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/returnMaterial.aspx">Return</asp:HyperLink></li>
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/viewAllRentals.aspx" id="A7">Currently Rented</asp:HyperLink></li>
+                               <li><asp:HyperLink ID="Rented" runat="server" NavigateUrl="~/librarian/viewAllRentals.aspx" >Currently Rented</asp:HyperLink></li>
                                <li class="divider"></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewPatron.aspx">Add a New Patron</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/PatronTable.aspx">View Patrons</asp:HyperLink></li>
@@ -83,8 +79,9 @@
                         </li>
                     
                     <li>
-                        <asp:HyperLink ID="Admin" runat="server" NavigateUrl="~/Admin/default.aspx">Admin</asp:HyperLink>
+                        <asp:HyperLink ID="materials" runat="server" NavigateUrl="~/search.aspx">Materials</asp:HyperLink>
                     </li>
+                   
                     <li>
                         <asp:LoginStatus ID="LoginStatus1" runat="server" />
                     </li>
