--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -72,7 +72,7 @@
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/AddPatron.aspx">Add a New Patron</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/PatronTable.aspx">View Patrons</asp:HyperLink></li>
                                <li class="divider"></li>
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewMaterial.aspx">Add New Material</asp:HyperLink></li>
+                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/AddMaterial.aspx">Add New Material</asp:HyperLink></li>
                                <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/MaterialsTable.aspx">View Material</asp:HyperLink></li>
                                
                             </ul>
