--- a/SLPLMasterPage.master
+++ b/SLPLMasterPage.master
@@ -66,27 +66,22 @@
                         <ul class="dropdown-menu">
                             <li><asp:HyperLink ID="OverdueReport" runat="server" NavigateUrl="~/librarian/overDue.aspx">OverDue Report</asp:HyperLink></li>
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/rentMaterial.aspx">Rent</asp:HyperLink></li>
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/RentMaterial.aspx">Rent</asp:HyperLink></li>
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/returnMaterial.aspx">Return</asp:HyperLink></li>
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/ReturnMaterial.aspx">Return</asp:HyperLink></li>
                                <li>
-                                   <asp:HyperLink ID="Rented" runat="server" NavigateUrl="~/librarian/viewAllRentals.aspx">Currently Rented</asp:HyperLink></li>
+                                   <asp:HyperLink ID="Rented" runat="server" NavigateUrl="~/Librarian/ViewAllRentals.aspx">Currently Rented</asp:HyperLink></li>
                                <li class="divider"></li>
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/AddPatron.aspx">Add a New Patron</asp:HyperLink></li>
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/AddPatron.aspx">Add a New Patron</asp:HyperLink></li>
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/PatronTable.aspx">View Patrons</asp:HyperLink></li>
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/PatronSearch.aspx">View Patrons</asp:HyperLink></li>
                                <li class="divider"></li>
-<<<<<<< HEAD
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/addNewMaterial.aspx">Add New Material</asp:HyperLink></li>
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/AddMaterial.aspx">Add New Material</asp:HyperLink></li>
                                <li>
-                                   <asp:HyperLink runat="server" NavigateUrl="~/librarian/MaterialsTable.aspx">View Material</asp:HyperLink></li>
-=======
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/AddMaterial.aspx">Add New Material</asp:HyperLink></li>
-                               <li><asp:HyperLink runat="server" NavigateUrl="~/librarian/MaterialsTable.aspx">View Material</asp:HyperLink></li>
->>>>>>> 38343c516c0c9a159c1372d107cd5768c4b4fa12
-                               
+                                   <asp:HyperLink runat="server" NavigateUrl="~/Librarian/MaterialsTable.aspx">View Material</asp:HyperLink></li>
+
                             </ul>
                         </li>
                     
